Certs carousel overflow fix.

--- a/css/e-prawnik.biz/layout/captcha.scss
+++ b/css/e-prawnik.biz/layout/captcha.scss
@@ -20,3 +20,28 @@
     width:50%; 
   }
 }
+/*@media screen and (max-width:680px){
+    .path-contact .captcha {
+      width: 100%;
+      margin-top:8em;
+    }
+    .path-user .captcha {
+      width: 100%;
+    }
+    .path-frontpage .captcha {
+      width:100%; 
+      margin-top:8em;
+    }
+  }
+  @media screen and (min-width:681px){
+    .path-contact .captcha {
+      width: 70%;
+    }
+    .path-user .captcha {
+      width: 100%;
+    }
+    .path-frontpage .captcha {
+      width:50%; 
+    }
+  }
+  */
